--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "build": "NODE_ENV=development babel src -d dist",
-    "test": "jest"
+    "build": "NODE_ENV=production babel src -d dist",
+    "test": "jest",
+    "watch": "NODE_ENV=development babel src -d dist --ignore 'src/**/*.test.js' -w -s"
   },
   "dependencies": {
     "whatwg-fetch": "^3.0.0"
